--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="time_created">Time Created</string>
     <string name="username">Username</string>
     <string name="image">Image</string>
+    <string name="login">Login</string>
+    <string name="signup">Signup</string>
+    <string name="password">password</string>
+    <string name="sign_up">Sign up</string>
+    <string name="logout">Logout</string>
+    <string name="compose">Compose</string>
+    <string name="home">Home</string>
 </resources>
