--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="logout">Logout</string>
     <string name="compose">Compose</string>
     <string name="home">Home</string>
+    <string name="screenname">Screenname</string>
 </resources>
