--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="screenname">Screenname</string>
     <string name="your_comment_here">Your comment here...</string>
     <string name="comment">Comment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
